# nclt-slam-project

./: .gitignore  .gitmodules  PROJECT_CONTEXT.md  README.md
configs/: dataset_config.yaml
data/: README.md
datasets/4seasons/: CHANGELOG.md  README.md
datasets/nclt/: CHANGELOG.md  README.md  WEEK1_SUMMARY.md  download_nclt.py
datasets/nclt_kaggle/: PROJECT_CONTEXT.md  README.md
datasets/robotcar/: .gitignore  CHANGELOG.md  EXPERIMENTS_4SEASONS.md  EXPERIMENTS_ROBOTCAR.md  README.md
datasets/rover/: CHANGELOG.md  EXPERIMENTS_ROVER.md  README.md  REPORT_experiment_1.1.md  RESULTS_ANALYSIS.md
docs/: experiment_index.md  thesis_reading_order.md
notebooks/: 02_kaggle_training.ipynb
scripts/: download_nclt_sample.py  evaluate_slam.py  generate_mock_sensors.py  prepare_kaggle_dataset.py  train_place_recognition.py
simulation/: .gitignore  README.md
simulation/docs/: environment.md  robot.md  simulation.md
simulation/experiments/: README.md
simulation/gazebo/: README.md
simulation/isaac/: README.md
simulation/scripts/: generate_world_v1.py  generate_world_v2.py
simulation/src/ugv_description/: package.xml
simulation/src/ugv_description/sdf/: model.sdf
simulation/src/ugv_description/urdf/: husky_frames.urdf
simulation/tools/: drive_manual.py  drive_route.py  plan_routes.py  record_drive.py  render_map.py  render_realistic.py  render_web_maps.py  web_nav.py
src/datasets/: __init__.py  nclt_dataset.py  nclt_pairs.py  sensor_loader.py  transforms.py
src/evaluation/: metrics.py  (+1 more)
tests/: test_dataset.py  test_models.py  test_sensor_loader.py
(+1543 files in other folders)
